# FastApi-Task-Manager

./: .env  .env.template  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  prestart.sh  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 06d9ca2508ae_add_tasks_table.py  35e5312b731b_add_tasks_users_table.py  bdbce349c5c9_add_users_table.py  f1424de56223_add_projects_table.py
app/: main.py  pre_start.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  projects.py  tasks.py  users.py
app/core/: auth.py  authorization.py  config.py  exceptions.py  response.py
app/crud/: __init__.py  base.py  crud_project.py  crud_task.py  crud_task_user.py  crud_user.py
app/db/: base.py  base_class.py  session.py  test_session.py
app/models/: project.py  task.py  task_user.py  user.py
app/schemas/: project.py  task.py  task_user.py  user.py
app/tests/: base.py  test_auth.py  test_project.py  test_task.py
