[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Behrooz Payoon <Behrooz.payoon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.7.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
